--- a/atlancy/application.properties
+++ b/atlancy/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Sat Oct 12 12:33:57 EEST 2013
+#Sat Jan 25 01:21:11 IST 2014
 app.grails.version=2.2.4
 app.name=atlancy
 app.version=0.1
+plugins.cloud-support=1.0.11
