--- a/atlancy/.project
+++ b/atlancy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>atlancy</name>
+	<name>atl007</name>
 	<comment></comment>
 	<projects>
 	</projects>
